kubernetes/apps/monitoring/portainer/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: portainer
  namespace: portainer
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: portainer
  ingress:
    # Envoy Gateway is the only application-data ingress path.
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    # Kubelet liveness/readiness probes use the chart's direct pod HTTPS port.
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
